crates/ars-components/src/utility/fieldset/snapshots/ars_components__utility__fieldset__tests__fieldset_error_message_hidden.snap
---
source: crates/ars-components/src/utility/fieldset.rs
assertion_line: 803
expression: "snapshot_attrs(&service.connect(&|_| {}).error_message_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "error-message",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "fieldset",
            ),
        ),
        (
            Hidden,
            Bool(
                true,
            ),
        ),
        (
            Id,
            String(
                "billing-error-message",
            ),
        ),
        (
            Role,
            String(
                "alert",
            ),
        ),
    ],
    styles: [],
}
