crates/ars-components/src/utility/fieldset/snapshots/ars_components__utility__fieldset__tests__fieldset_legend_default.snap
---
source: crates/ars-components/src/utility/fieldset.rs
assertion_line: 783
expression: "snapshot_attrs(&service.connect(&|_| {}).legend_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "legend",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "fieldset",
            ),
        ),
        (
            Id,
            String(
                "billing-legend",
            ),
        ),
    ],
    styles: [],
}
